@@ -42,42 +42,47 @@ public class SearchWindow {
 		String query = searchField.getText();
 		if (query.isEmpty())
 			return;
-		List<Player> players = API.search(query);
-		for (Player player : players) {
-			try {
-				FXMLLoader playerItemLoader =
-					new FXMLLoader(getClass().getResource("ui/playerItem.fxml"));
-				HBox playerItem = playerItemLoader.load();
-				String handle = player.getHandle();
-				int rating = player.getRating();
-				String location = player.getLocation();
-				String avatarUrl = (player.getAvatar() != null && !player.getAvatar().isEmpty())
-					? player.getAvatar()
-					: BASE_URL;
-				ImageView avatarIcon = (ImageView) playerItem.lookup("#avatarIcon");
-				Label handleLabel = (Label) playerItem.lookup("#handleLabel");
-				Region countryFlagIcon = (Region) playerItem.lookup("#countryFlagIcon");
-				Label ratingLabel = (Label) playerItem.lookup("#ratingLabel");
-				Button challengeButton = (Button) playerItem.lookup("#challengeButton");
-				avatarIcon.setImage(new Image(avatarUrl, true));
-				handleLabel.setText(handle);
-				ratingLabel.setText("Rating: " + rating);
-				if (location != null && !location.isEmpty()) {
-					countryFlagIcon.getStyleClass().add("country-" + location);
-				} else {
-					countryFlagIcon.setManaged(false);
-					countryFlagIcon.setVisible(false);
+		Thread.ofVirtual().start(() -> {
+			List<Player> players = API.search(query);
+			Platform.runLater(() -> {
+				for (Player player : players) {
+					try {
+						FXMLLoader playerItemLoader =
+							new FXMLLoader(getClass().getResource("ui/playerItem.fxml"));
+						HBox playerItem = playerItemLoader.load();
+						String handle = player.getHandle();
+						int rating = player.getRating();
+						String location = player.getLocation();
+						String avatarUrl =
+							(player.getAvatar() != null && !player.getAvatar().isEmpty())
+							? player.getAvatar()
+							: BASE_URL;
+						ImageView avatarIcon = (ImageView) playerItem.lookup("#avatarIcon");
+						Label handleLabel = (Label) playerItem.lookup("#handleLabel");
+						Region countryFlagIcon = (Region) playerItem.lookup("#countryFlagIcon");
+						Label ratingLabel = (Label) playerItem.lookup("#ratingLabel");
+						Button challengeButton = (Button) playerItem.lookup("#challengeButton");
+						avatarIcon.setImage(new Image(avatarUrl, true));
+						handleLabel.setText(handle);
+						ratingLabel.setText("Rating: " + rating);
+						if (location != null && !location.isEmpty()) {
+							countryFlagIcon.getStyleClass().add("country-" + location);
+						} else {
+							countryFlagIcon.setManaged(false);
+							countryFlagIcon.setVisible(false);
+						}
+						playerItem.setOnMouseClicked(event -> openProfile(handle));
+						challengeButton.setOnAction(event -> startMatchmaking(handle));
+						playerContainer.getChildren().add(playerItem);
+					} catch (Exception exception) {
+						exception.printStackTrace();
+					}
 				}
-				playerItem.setOnMouseClicked(event -> openProfile(handle));
-				challengeButton.setOnAction(event -> startMatchmaking(handle));
-				playerContainer.getChildren().add(playerItem);
-			} catch (Exception exception) {
-				exception.printStackTrace();
-			}
-		}
+			});
+		});
 	}
 	private void startMatchmaking(String target) {
-		new Thread(() -> {
+		Thread.ofVirtual().start(() -> {
 			String handle = SettingsManager.userHandle;
 			long dt = 500;
 			long maxDt = 6000;
@@ -101,7 +106,7 @@ public class SearchWindow {
 				} catch (Exception ignored) { // high-frequency polling operation
 				}
 			}
-		}).start();
+		});
 	}
 	private void openProfile(String handle) {
 		try {
